<resources>
    <string name="app_name">SIC</string>
    <string name="intro_first_line">Exchanging Solution</string>
    <string name="intro_second_line">Exchanging is in your hand now</string>
    <string name="btn_login">User Login Here</string>
    <string name="btn_user_signup">New user? Register here</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="user_login">USER LOGIN</string>
    <string name="regstration_message">new user regstration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email adress</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="contact_number">Contact number</string>
    <string name="btn_register">Register</string>
</resources>
